// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid component matches the snapshot 1`] = `
<Grid
  animationState=""
  clearAnimation={[Function]}
  clearSelected={[Function]}
  gridEntries={
    Array [
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
      Object {
        "letter": "",
        "selected": false,
      },
    ]
  }
  selectedLetters=""
  submitWord={[Function]}
  toggleSelected={[Function]}
  triggerAnimation={[Function]}
>
  <withAnimatable(View)
    animation={
      Object {
        "0": Object {},
        "1": Object {},
      }
    }
    delay={0}
    direction="normal"
    duration={0}
    iterationCount={1}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "marginBottom": -10,
        "maxWidth": 315,
        "top": 0,
        "width": "100%",
        "zIndex": 100,
      }
    }
    useNativeDriver={false}
  >
    <AnimatedComponent
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
            "marginBottom": -10,
            "maxWidth": 315,
            "top": 0,
            "width": "100%",
            "zIndex": 100,
          },
          Object {},
          Object {},
        ]
      }
    >
      <View>
        <react-native-mock>
          <ImageBackground
            resizeMode="stretch"
            source={
              Object {
                "testUri": "src/images/gridBackground.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "height": null,
                "justifyContent": "center",
                "paddingBottom": 2,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 5,
                "width": null,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "maxHeight": 300,
                    "maxWidth": 300,
                  }
                }
              >
                <react-native-mock>
                  <View
                    key="012"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem0"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem1"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem2"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                  <View
                    key="345"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem3"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem4"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#aaa",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem5"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                  <View
                    key="678"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem6"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem7"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem8"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock />
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "flex-start",
                    "marginHorizontal": 10,
                  }
                }
              >
                <react-native-mock>
                  <View
                    style={
                      Object {
                        "borderBottomColor": "#444",
                        "borderBottomWidth": 1,
                        "flex": 1,
                        "height": 30,
                        "marginLeft": 20,
                      }
                    }
                  >
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 20,
                          }
                        }
                      >
                        <react-native-mock />
                      </Text>
                    </react-native-mock>
                  </View>
                  <View>
                    <react-native-mock>
                      <TouchableOpacity
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "borderRadius": 8,
                            "height": 50,
                            "justifyContent": "center",
                            "width": 60,
                          }
                        }
                      >
                        <react-native-mock>
                          <Icon
                            allowFontScaling={false}
                            name="md-backspace"
                            size={35}
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                Array [
                                  Object {
                                    "color": undefined,
                                    "fontSize": 35,
                                  },
                                  undefined,
                                  Object {
                                    "fontFamily": "Ionicons",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                ]
                              }
                            >
                              <react-native-mock>
                                
                              </react-native-mock>
                            </Text>
                          </Icon>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
            </react-native-mock>
          </ImageBackground>
        </react-native-mock>
      </View>
    </AnimatedComponent>
  </withAnimatable(View)>
</Grid>
`;

exports[`Grid component matches the snapshot 2`] = `
<Grid
  animationState=""
  clearAnimation={[Function]}
  clearSelected={[Function]}
  gridEntries={
    Array [
      Object {
        "letter": "a",
        "selected": false,
      },
      Object {
        "letter": "s",
        "selected": false,
      },
      Object {
        "letter": "d",
        "selected": true,
      },
      Object {
        "letter": "f",
        "selected": true,
      },
      Object {
        "letter": "g",
        "selected": false,
      },
      Object {
        "letter": "h",
        "selected": false,
      },
      Object {
        "letter": "j",
        "selected": false,
      },
      Object {
        "letter": "k",
        "selected": false,
      },
      Object {
        "letter": "l",
        "selected": true,
      },
    ]
  }
  selectedLetters=""
  submitWord={[Function]}
  toggleSelected={[Function]}
  triggerAnimation={[Function]}
>
  <withAnimatable(View)
    animation={
      Object {
        "0": Object {},
        "1": Object {},
      }
    }
    delay={0}
    direction="normal"
    duration={0}
    iterationCount={1}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "marginBottom": -10,
        "maxWidth": 315,
        "top": 0,
        "width": "100%",
        "zIndex": 100,
      }
    }
    useNativeDriver={false}
  >
    <AnimatedComponent
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
            "marginBottom": -10,
            "maxWidth": 315,
            "top": 0,
            "width": "100%",
            "zIndex": 100,
          },
          Object {},
          Object {},
        ]
      }
    >
      <View>
        <react-native-mock>
          <ImageBackground
            resizeMode="stretch"
            source={
              Object {
                "testUri": "src/images/gridBackground.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "height": null,
                "justifyContent": "center",
                "paddingBottom": 2,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 5,
                "width": null,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "maxHeight": 300,
                    "maxWidth": 300,
                  }
                }
              >
                <react-native-mock>
                  <View
                    key="012"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem0"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  A
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem1"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  S
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem2"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={
                              Object {
                                "testUri": "src/images/select3.png",
                              }
                            }
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  D
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                  <View
                    key="345"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem3"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={
                              Object {
                                "testUri": "src/images/select4.png",
                              }
                            }
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  F
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem4"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#aaa",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  G
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem5"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  H
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                  <View
                    key="678"
                    style={
                      Object {
                        "flex": 0.3333333333333333,
                        "flexDirection": "row",
                        "margin": 0,
                      }
                    }
                  >
                    <react-native-mock>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem6"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  J
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem7"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={null}
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  K
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                      <TouchableOpacity
                        activeOpacity={0.8}
                        key="gridItem8"
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "borderColor": "#000000",
                            "borderWidth": 2,
                            "flex": 0.3333333333333333,
                            "justifyContent": "center",
                            "margin": 0,
                          }
                        }
                      >
                        <react-native-mock>
                          <ImageBackground
                            source={
                              Object {
                                "testUri": "src/images/select9.png",
                              }
                            }
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "height": null,
                                "justifyContent": "center",
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock>
                              <Text
                                style={
                                  Object {
                                    "color": "#000",
                                    "fontFamily": "OFLGoudyStM",
                                    "fontSize": 60,
                                    "marginTop": 11,
                                  }
                                }
                              >
                                <react-native-mock>
                                  L
                                </react-native-mock>
                              </Text>
                            </react-native-mock>
                          </ImageBackground>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "flex-start",
                    "marginHorizontal": 10,
                  }
                }
              >
                <react-native-mock>
                  <View
                    style={
                      Object {
                        "borderBottomColor": "#444",
                        "borderBottomWidth": 1,
                        "flex": 1,
                        "height": 30,
                        "marginLeft": 20,
                      }
                    }
                  >
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 20,
                          }
                        }
                      >
                        <react-native-mock />
                      </Text>
                    </react-native-mock>
                  </View>
                  <View>
                    <react-native-mock>
                      <TouchableOpacity
                        onLongPress={[Function]}
                        onPress={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "borderRadius": 8,
                            "height": 50,
                            "justifyContent": "center",
                            "width": 60,
                          }
                        }
                      >
                        <react-native-mock>
                          <Icon
                            allowFontScaling={false}
                            name="md-backspace"
                            size={35}
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                Array [
                                  Object {
                                    "color": undefined,
                                    "fontSize": 35,
                                  },
                                  undefined,
                                  Object {
                                    "fontFamily": "Ionicons",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                ]
                              }
                            >
                              <react-native-mock>
                                
                              </react-native-mock>
                            </Text>
                          </Icon>
                        </react-native-mock>
                      </TouchableOpacity>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
            </react-native-mock>
          </ImageBackground>
        </react-native-mock>
      </View>
    </AnimatedComponent>
  </withAnimatable(View)>
</Grid>
`;
